--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "inquirer": "^5.1.0",
     "ramda": "^0.25.0",
     "randomcolor": "^0.5.3",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "hoek": "5.0.3"
   }
 }
